--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://camila-mp.github.io/",
+  "homepage": "https://camila-mp.github.io/portfolio/",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
